2003-01-31  Matthias Clasen  <maclas@gmx.de>

	* gdk/gdkpixbuf.h: 
	* gdk/gdkpixbuf-render.c (gdk_pixbuf_render_to_drawable): 
	(gdk_pixbuf_render_to_drawable_alpha): Deprecate.  (#60582)

	* gtk/gtkcolorsel.h:
	* gtk/gtkcolorsel.c (gtk_color_selection_set_change_palette_hook):
	Deprecate.  (#98167)

	* gtk/gtkpaned.h: Deprecate gtk_paned_computed_position(). (#97077)

	* gtk/gtkmain.h: Deprecate the gtk_timeout_*, gtk_idle_*
	and gtk_input_* functions.  (#71596)
	
	* gtk/gtkentry.c (gtk_entry_move_cursor): 
	* gtk/gtklabel.c (gtk_label_move_cursor): Handle
	GTK_MOVEMENT_HORIZONTAL_PAGES in switches.

	* gdk/gdk.h: Deprecate gdk_wcstombs() and gdk_mbstowcs().  (#79803)

	* gtk/gtkitemfactory.h: 
	* gtk/gtkitemfactory.c (gtk_item_factory_add_foreign): Deprecate. 
	(#69244)

Thu Jan 30 23:48:30 2003  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeviewcolumn.c (_gtk_tree_view_column_count_special_cell):
	only count the special cell if it is also visible,
	(_gtk_tree_view_column_get_neighbor_sizes): only take the width into
	account from visible cells,
	(gtk_tree_view_column_cell_get_position): likewise, (Reported and
	testcase provided by Vasco Alexandre da Silva Costa, via IRC,
	tracking bug was #104563).
	
Thu Jan 30 23:46:15 2003  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_cell_process_action):
	subtract expander space and focus line space from the extra space
	we are about the allocate. (Fixes #104635).

Thu Jan 30 23:42:03 2003  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtkstyle.c (apply_affine_on_point): fix rouding error
	(Fixes #96242, patch from Soeren Sandmann).

Thu Jan 30 16:54:29 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtknotebook.c: Patch from Soeren Sandmann
	to update the states of the tab label child
	widgets to match the state of the tabs. 
	(#93389, Reported by Tommi Komulainen)

Thu Jan 30 16:30:54 2003  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am (EXTRA_DIST): Remove gtk+.spec.in from