@@ -148,9 +148,10 @@ gboolean gtk_selection_data_targets_include_text (GtkSelectionData  *selection_d
 void gtk_selection_remove_all      (GtkWidget *widget);
 
 /* Event handlers */
-
+#ifndef GTK_DISABLE_DEPRECATED
 gboolean gtk_selection_clear		  (GtkWidget 	     *widget,
 					   GdkEventSelection *event);
+#endif
 gboolean _gtk_selection_request		  (GtkWidget  	     *widget,
 					   GdkEventSelection *event);
 gboolean _gtk_selection_incr_event	  (GdkWindow         *window,
